# open-ai-client

./: .gitignore  Cargo.toml  README.md
src/: base_client.rs  client.rs  client_builder.rs  lib.rs
src/audio/: create_speech_request.rs  create_speech_response.rs  create_transcription_request.rs  create_translation_request.rs  handler.rs  mod.rs  response.rs  response_format.rs  transcription_request.rs  translation_request.rs
src/beta/: mod.rs
src/beta/assistants/: create_file_request.rs  handler.rs  (+7 more)
src/chat/: handler.rs  mod.rs  request.rs  response.rs  response_chunk.rs  streaming_response.rs
src/chat_completion/: handler.rs  mod.rs  request.rs  response.rs  response_chunk.rs  response_format.rs
src/common/: chat_message.rs  error.rs  file.rs  mod.rs  models.rs  query_parameters.rs  request.rs  sorting_order.rs  stream.rs  token_usage.rs
src/embeddings/: handler.rs  mod.rs  request.rs  response.rs
src/files/: delete_response.rs  handler.rs  list_response.rs  mod.rs  request.rs
src/fine_tunning/: handler.rs  job_event_response.rs  job_list_response.rs  mod.rs  request.rs  response.rs  status.rs
src/images/: create_edit_request.rs  create_image_variant_request.rs  create_request.rs  create_variant_request.rs  edit_request.rs  handler.rs  image_response_format.rs  image_size.rs  mod.rs  response.rs
src/models/: handler.rs  mod.rs  response.rs
src/moderations/: handler.rs  mod.rs  request.rs  response.rs
tests/: assistants.rs  audio.rs  chat.rs  chat_completion.rs  embeddings.rs  messages.rs  models.rs  moderations.rs  root.rs  runs.rs  threads.rs
(+30 files in other folders)
