[package]
name = "open-ai-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["stable"]

full = ["stable", "beta"]
stable = ["models", "moderations"]
beta = []

models = []
moderations = []

[dependencies]
anyhow = { version = "1" }
base64 = { version = "0.21.5" }
futures-util = { version = "0.3" }
reqwest = { version = "~0.11", default-features = false, features = ["json", "trust-dns", "rustls-tls", "stream", "multipart"] }
reqwest-eventsource = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order", "raw_value"] }
tokio = { version = "1", default-features = false, features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { version = "0.7.9", default-features = false, features = ["codec"] }
tracing = { version = "0.1" }
url = { version = "2.4" }


